feat: basic api structure

--- a/client/styles.css
+++ b/client/styles.css
@@ -44,7 +44,7 @@ img {
   animation: horizontal-shaking 0.2s infinite;
 }
 
-#register-notifications {
+#subscribe-notifications {
   margin-top: 3em;
   text-decoration: none;
   position: relative;
@@ -61,12 +61,12 @@ img {
   cursor: pointer;
 }
 
-#register-notifications:hover {
+#subscribe-notifications:hover {
   animation: ani 8s linear infinite;
   border: none;
 }
   
-#register-notifications:before {
+#subscribe-notifications:before {
   content: '';
   position: absolute;
   top: -5px;
@@ -80,11 +80,11 @@ img {
   transition: 1s;
 }
   
-#register-notifications:hover::before {
+#subscribe-notifications:hover::before {
   filter: blur(20px);
 }
   
-#register-notifications:active {
+#subscribe-notifications:active {
   background: linear-gradient(32deg,#03a9f4,#f441a5,#ffeb3b,#03a9f4);
 }
 
