feat: add gpio wrapper, led blinking, other improvements

--- a/client/styles.css
+++ b/client/styles.css
@@ -40,6 +40,10 @@ img {
   align-items: center;
 }
 
+#washing-done {
+  display: none;
+}
+
 #washing-progress {
   animation: horizontal-shaking 0.2s infinite;
 }
